2/13/26
- add .gitignore
- fix player position does now resets on endgame
2/18/26
- Improve readability more
- Update meteors to always reset off screen
2/19/26
- change magic number to meteor.DEFAULT_SPEED_DOWN constant
- implement highscores_human.csv and scores_human.csv to track human stats
- change meteor.py to entities.py for clarity
(commit 2)
- change folder names/hierarchy to better reflect files
- change assets/scores.csv to highscores/highscores_human.csv
2/25/26
- refactor code around OOP
- create player class
(commit 2)
- fix player able to leave screen by adding screen margin
- add score plot devtool
- deleted "master" and "refactor-readability" branches
- raised min and max meteors to make game more difficult
(commit 3)
- update class names to use PascalCase
- fix game restart on trying to exit window
2/26/26
- change "per_second" var names to "per_tick" to be more descriptive
- delete unused var
- Add AI training mode (changes highscore log, does not show hs screen on restart)