@@ -1,6 +1,8 @@
 #Window & Fonts
 SCREEN_WIDTH = 1920
 SCREEN_HEIGHT = 1080
+SCREEN_CENTER_Y = SCREEN_HEIGHT/2
+SCREEN_CENTER_X = SCREEN_WIDTH/2
 FONT_SIZE = 50
 FONT_TYPE = 'mats bold'
 FONT_COLOR = 'darkgoldenrod1'
@@ -24,3 +26,5 @@ HIGHSCORES_LOG_HUMAN = "./highscores/highscores_human.csv"
 HIGHSCORES_LOG_AI = "./highscores/highscores_ai.csv"
 SCORES_LOG_HUMAN = "./highscores/scores_human.csv"
 SCORES_LOG_AI = "./highscores/scores_ai.csv"
+
+COIN_SPAWN_CHANCE = 360 # 1/x chance the score will spawn per frame. Higher = less likely
