@@ -33,3 +33,22 @@
 140
 320
 1000
+150
+160
+80
+110
+110
+80
+150
+130
+100
+110
+130
+140
+1380
+2090
+410
+3910
+4090
+610
+2680
